docs(peer-egress): document how egress sockets stay off the tunnel
The spec gains a section on outbound sockets: why the forced-deny list is
not enough on a node that is also a consumer, the options and their byte
orders, how the interface is chosen per destination, the refusal when
nothing else leads there, how each platform reads the table, and what the
Java client needs to reach a socket's handle. The system-changes table
notes the options are per socket. The Java SO_MARK limitation is narrowed
to Linux, and launching the Java client without java -jar is listed.

The usage guide and release notes say the same for operators, including
the JVM option for anyone not using java -jar.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>